# SQLite-Wrapper-Cpp

./: .gitignore  CMakeLists.txt  README.md  SQLite-Wrapper.sln  SQLite-Wrapper.txt  make-gw.ps1  make.ps1
BuildTools/: Doxyfile  clear.ps1  make.ps1  opendoc.py
Debug/: SQLite-Wrapper.ilk
Headers/: SQLite-Wrapper.h
SQLite-Wrapper/: SQLite-Wrapper.vcxproj  SQLite-Wrapper.vcxproj.filters  test.db
SQLite-Wrapper/Debug/: sqlite3.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  vc120.idb
SQLite-Wrapper/Debug/SQLite-Wrapper.tlog/: CL.read.1.tlog  CL.read.3.tlog  CL.write.1.tlog  SQLite-Wrapper.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Source Files/: SQLite-Wrapper.cpp  main.cpp
includes/: SQLite-Wrapper.h
sources/: SQLite-Wrapper.cpp  main.cpp
